[package]
name = "date-group"
description = "Group a directory of files by date"
version = "0.3.0"
authors = ["Jake Howard <git@theorangeone.net>"]
edition = "2018"
repository = "https://github.com/RealOrangeOne/date-group"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
chrono = "0.4.11"
console = "0.11.3"
dtparse = "1.1.0"
indicatif = "0.15.0"
kamadak-exif = "0.5.1"
lazy_static = "1.4.0"
structopt = "0.3.15"
walkdir = "2.3.1"
