[package]
name = "date-group"
description = "Group a directory of files by date"
version = "0.3.0"
authors = ["Jake Howard <git@theorangeone.net>"]
edition = "2018"
repository = "https://github.com/RealOrangeOne/date-group"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
chrono = "0.4.19"
console = "0.15.0"
dtparse = "1.2.0"
indicatif = "0.16.2"
kamadak-exif = "0.5.4"
lazy_static = "1.4.0"
structopt = "0.3.26"
walkdir = "2.3.2"
